Ensimmäinen versio vuokralaisen kuvien lataamisesta
